tests/programs/modules/errors/circular/main.tiny
import "a.tiny";
print(func_a());
