tests/programs/modules/errors/circular/main.expected
Error: circular import detected: 'a.tiny' (line 1)

1 error(s)
